--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.TelaCadastroServico"></activity>
+        <activity android:name=".Activity.TelaVisualizaServicos"></activity>
+        <activity android:name=".Activity.TelaCadastroServico" />
         <activity android:name=".Activity.TelaEditPerfil" />
         <activity android:name=".Activity.TelaPerfil" />
         <activity android:name=".Activity.TelaLogin" />
